# my-portfolio

./: build.sh  ignore.vercelignore  pyproject.toml  vercel.json
api/: index.py
django_project/: settings.py  urls.py
media/images/: Back-End.jfif  Contact-Information.jfif  class-chat.jfif  database.jfif  font-end.jfif  suggestionBox.jfif
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_rename_contacts_contact.py  0003_about_me_project_skill.py  0004_alter_about_me_description.py  0005_alter_project_description.py  0006_alter_about_me_description_alter_project_description.py
static/css/: index.css  message.css
templates/: index.html
