[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "My Django project ready for Vercel"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "django_project" }]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
# Optional:
# djangorestframework = "^3.14"
# psycopg2-binary = "^2.9"

[tool.poetry.dev-dependencies]
# pytest = "^7.3" (optional)

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
