[tool.poetry.project]
name = "django-template"
version = "0.1.0"
description = "My Django project ready for Vercel"
authors = ["Tharcisse irasubiza irasubizatharcisse23@gmail.com"]
packages = [{ include = "django_project" }]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"

[tool.poetry.dev-dependencies]
# pytest = "^7.3" (optional)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
